Allow 'ctlplane' to be used within Net IP Maps
When using network isolation you might want to selective
move one of the services back to the default ctlplane network
by simply using the ServiceNetMap parameter. This patch
adds ctlplane to the output parameters for both
the net_ip_map and net_ip_list_map nested stacks so that
this is possible.

As part of this patch we also split out the NetIpSubnetMap
into its own unique nested stack so that the Heat input
parameters for this stack are more clearly named.

Change-Id: Iaa2dcaebeac896404e87ec0c635688b2a59a9e0f

--- a/network/ports/net_ip_list_map.yaml
+++ b/network/ports/net_ip_list_map.yaml
@@ -1,6 +1,9 @@
 heat_template_version: 2015-04-30
 
 parameters:
+  ControlPlaneIpList:
+    default: []
+    type: comma_delimited_list
   ExternalIpList:
     default: []
     type: comma_delimited_list
@@ -23,6 +26,7 @@ outputs:
       A Hash containing a mapping of network names to assigned lists
       of IP addresses.
     value:
+      ctlplane: {get_param: ControlPlaneIpList}
       external: {get_param: ExternalIpList}
       internal_api: {get_param: InternalApiIpList}
       storage: {get_param: StorageIpList}
