--- a/network/ports/net_ip_map.yaml
+++ b/network/ports/net_ip_map.yaml
@@ -1,6 +1,9 @@
 heat_template_version: 2015-04-30
 
 parameters:
+  ControlPlaneIp:
+    default: ''
+    type: string
   ExternalIp:
     default: ''
     type: string
@@ -23,6 +26,7 @@ outputs:
       A Hash containing a mapping of network names to assigned IPs
       for a specific machine.
     value:
+      ctlplane: {get_param: ControlPlaneIp}
       external: {get_param: ExternalIp}
       internal_api: {get_param: InternalApiIp}
       storage: {get_param: StorageIp}
