--- a/network/config/bond-with-vlans/controller.yaml
+++ b/network/config/bond-with-vlans/controller.yaml
@@ -26,9 +26,10 @@ parameters:
     description: IP address/subnet on the tenant network
     type: string
   BondInterfaceOvsOptions:
-    default: ''
+    default: 'bond_mode=balance-tcp lacp=active other-config:lacp-fallback-ab=true'
     description: The ovs_options string for the bond interface. Set things like
                  lacp=active and/or bond_mode=balance-slb using this option.
+                 Default wil attempt LACP, but will fall back to active-backup.
     type: string
   ExternalNetworkVlanID:
     default: 10
