--- a/controller.yaml
+++ b/controller.yaml
@@ -585,6 +585,7 @@ resources:
   NetworkConfig:
     type: OS::TripleO::Controller::Net::SoftwareConfig
     properties:
+      ControlPlaneIp: {get_attr: [Controller, networks, ctlplane, 0]}
       ExternalIpSubnet: {get_attr: [ExternalPort, ip_subnet]}
       InternalApiIpSubnet: {get_attr: [InternalApiPort, ip_subnet]}
       StorageIpSubnet: {get_attr: [StoragePort, ip_subnet]}
