--- a/puppet/compute-puppet.yaml
+++ b/puppet/compute-puppet.yaml
@@ -312,6 +312,7 @@ resources:
   NetworkConfig:
     type: OS::TripleO::Compute::Net::SoftwareConfig
     properties:
+      ControlPlaneIp: {get_attr: [NovaCompute, networks, ctlplane, 0]}
       InternalApiIpSubnet: {get_attr: [InternalApiPort, ip_subnet]}
       StorageIpSubnet: {get_attr: [StoragePort, ip_subnet]}
       TenantIpSubnet: {get_attr: [TenantPort, ip_subnet]}
