--- a/net-config-static-bridge.yaml
+++ b/net-config-static-bridge.yaml
@@ -1,8 +1,8 @@
 heat_template_version: 2015-04-30
 
 description: >
-  Software Config to drive os-net-config to configure VLANs for the
-  cinder storage role.
+  Software Config to drive os-net-config for a simple bridge configured
+  with a static IP address for the ctlplane network.
 
 parameters:
   ControlPlaneIp:
@@ -29,18 +29,6 @@ parameters:
     default: ''
     description: IP address/subnet on the tenant network
     type: string
-  InternalApiNetworkVlanID:
-    default: 20
-    description: Vlan ID for the internal_api network traffic.
-    type: number
-  StorageNetworkVlanID:
-    default: 30
-    description: Vlan ID for the storage network traffic.
-    type: number
-  StorageMgmtNetworkVlanID:
-    default: 40
-    description: Vlan ID for the storage mgmt network traffic.
-    type: number
   ControlPlaneSubnetCidr: # Override this via parameter_defaults
     default: '24'
     description: The subnet CIDR of the control plane network.
@@ -62,7 +50,7 @@ resources:
           network_config:
             -
               type: ovs_bridge
-              name: br-storage
+              name: {get_input: bridge_name}
               use_dhcp: false
               addresses:
                 -
@@ -81,27 +69,9 @@ resources:
               members:
                 -
                   type: interface
-                  name: nic1
+                  name: {get_input: interface_name}
                   # force the MAC address of the bridge to this interface
                   primary: true
-                -
-                  type: vlan
-                  vlan_id: {get_param: InternalApiNetworkVlanID}
-                  addresses:
-                    -
-                      ip_netmask: {get_param: InternalApiIpSubnet}
-                -
-                  type: vlan
-                  vlan_id: {get_param: StorageNetworkVlanID}
-                  addresses:
-                    -
-                      ip_netmask: {get_param: StorageIpSubnet}
-                -
-                  type: vlan
-                  vlan_id: {get_param: StorageMgmtNetworkVlanID}
-                  addresses:
-                    -
-                      ip_netmask: {get_param: StorageMgmtIpSubnet}
 
 outputs:
   OS::stack_id:
