Remove deleted Nova rows
Creates cron job running every twelve hours
for "nova-manage db archive_deleted_rows"

Partial-bug: rhbz#1249106
Depends-On: Ic674f4d39bc88f89abfeb0ce99a571c2534e57e4
Change-Id: I4740cc02aa9714f48798521fe9918ac3487db031
(cherry picked from commit 8a4f47ca93bf7e8f1cd130084c4047c29b7e575c)

--- a/puppet/controller.yaml
+++ b/puppet/controller.yaml
@@ -505,6 +505,11 @@ parameters:
     default: 0
     description: Number of workers for Neutron service.
     type: number
+  NovaEnableDBPurge:
+    default: true
+    description: |
+        Whether to create cron job for purging soft deleted rows in Nova database.
+    type: boolean
   NovaPassword:
     default: unset
     description: The password for the nova service and db account, used by nova-api.
@@ -1030,6 +1035,7 @@ resources:
               - '/ceilometer'
         snmpd_readonly_user_name: {get_param: SnmpdReadonlyUserName}
         snmpd_readonly_user_password: {get_param: SnmpdReadonlyUserPassword}
+        nova_enable_db_purge: {get_param: NovaEnableDBPurge}
         nova_password: {get_param: NovaPassword}
         nova_dsn:
           list_join:
@@ -1375,6 +1381,7 @@ resources:
                 nova::network::neutron::neutron_admin_auth_url: {get_input: neutron_admin_auth_url}
                 nova::vncproxy::host: {get_input: nova_api_network}
                 nova::db::mysql::password: {get_input: nova_password}
+                nova_enable_db_purge: {get_input: nova_enable_db_purge}
 
                 # Horizon
                 apache::ip: {get_input: horizon_network}
