--- a/puppet/compute-puppet.yaml
+++ b/puppet/compute-puppet.yaml
@@ -485,6 +485,13 @@ resources:
               server: {get_param: NtpServer}
         enable_package_install: {get_param: EnablePackageInstall}
 
+  # Hook for site-specific additional pre-deployment config, e.g extra hieradata
+  ComputeExtraConfigPre:
+    depends_on: NovaComputeDeployment
+    type: OS::TripleO::ComputeExtraConfigPre
+    properties:
+        server: {get_resource: NovaCompute}
+
   UpdateConfig:
     type: OS::TripleO::Tasks::PackageUpdate
 
@@ -528,4 +535,8 @@ outputs:
       {get_resource: NovaCompute}
   config_identifier:
     description: identifier which changes if the node configuration may need re-applying
-    value: {get_attr: [NovaComputeDeployment, deploy_stdout]}
+    value:
+      list_join:
+      - ','
+      - - {get_attr: [NovaComputeDeployment, deploy_stdout]}
+        - {get_attr: [ComputeExtraConfigPre, deploy_stdout]}
