Ensure mysql root can only connect from localhost
Currently mysql root user can connect in a passwordless way from :

  * localhost
  * 127.0.0.1
  * ::1
  * <HOSTNAME>

This patch ensures that the mysql root user can connect only from localhost.

Change-Id: If64fd383737c2fbeed4adbe8d98b1f92610956b2

--- a/puppet/hieradata/controller.yaml
+++ b/puppet/hieradata/controller.yaml
@@ -98,6 +98,7 @@ horizon::django_session_engine: 'django.contrib.sessions.backends.cache'
 
 # mysql
 mysql::server::manage_config_file: true
+mysql::server::remove_default_accounts: true
 
 
 tripleo::loadbalancer::keystone_admin: true
