--- a/puppet/hieradata/controller.yaml
+++ b/puppet/hieradata/controller.yaml
@@ -85,6 +85,7 @@ ceilometer::agent::auth::auth_endpoint_type: 'internalURL'
 
 # cinder
 cinder::scheduler::scheduler_driver: cinder.scheduler.filter_scheduler.FilterScheduler
+cinder::cron::db_purge::destination: '/dev/null'
 
 # heat
 heat::engine::configure_delegated_roles: false
