Switch for Keystone DB cron job
- Adds parameter to enable switching off token flush cron job.
- Sets destination for deleted rows to /dev/null

Change-Id: I9e8aed969e81595d8a1d0a5300da17da6ba15c03
Partial-bug: rhbz#1249106
Depends-On: I5e51562338f68b4ba1b2e942907e6f6a0ab7a61e
(cherry picked from commit 31b05b17bfd028d16990231079c4bfde777cde40)

--- a/puppet/hieradata/controller.yaml
+++ b/puppet/hieradata/controller.yaml
@@ -46,6 +46,7 @@ keystone::config::keystone_config:
     value: 'HTTP_X_FORWARDED_PROTO'
   ec2/driver:
     value: 'keystone.contrib.ec2.backends.sql.Ec2'
+keystone::cron::token_flush::destination: '/dev/null'
 
 #swift
 swift::proxy::pipeline:
