--- a/puppet/controller.yaml
+++ b/puppet/controller.yaml
@@ -279,6 +279,11 @@ parameters:
     default: ''
     description: Keystone self-signed certificate authority certificate.
     type: string
+  KeystoneEnableDBPurge:
+    default: true
+    description: |
+        Whether to create cron job for purging soft deleted rows in Keystone database.
+    type: boolean
   KeystoneSigningCertificate:
     default: ''
     description: Keystone certificate for verifying token validity.
@@ -921,6 +926,7 @@ resources:
         keystone_ssl_certificate_key: {get_param: KeystoneSSLCertificateKey}
         keystone_notification_driver: {get_param: KeystoneNotificationDriver}
         keystone_notification_format: {get_param: KeystoneNotificationFormat}
+        keystone_enable_db_purge: {get_param: KeystoneEnableDBPurge}
         keystone_dsn:
           list_join:
             - ''
@@ -1279,6 +1285,7 @@ resources:
                 keystone::notification_format: {get_input: keystone_notification_format}
                 keystone::admin_workers: {get_input: keystone_workers}
                 keystone::public_workers: {get_input: keystone_workers}
+                keystone_enable_db_purge: {get_input: keystone_enable_db_purge}
 
                 # MongoDB
                 mongodb::server::bind_ip: {get_input: mongo_db_network}
